rephrase a few sentences

--- a/customize.html
+++ b/customize.html
@@ -91,16 +91,16 @@
   <div class="container">
 
     <div class="alert alert-danger bs-alert-old-docs">
-      <strong>주의!</strong> 더 이상 공식지원하지 않는 v2.3.2 문서이다. <a href="http://getbootstrap.com">최신 버전 부트스트랩을 확인하라!</a>
+      <strong>주의!</strong> 더 이상 공식지원하지 않는 v2.3.2 문서입니다. <a href="http://getbootstrap.com">최신 버전 부트스트랩을 확인하세요!</a>
     </div>
 
     <!-- Docs nav
     ================================================== -->
     <div class="row">
       <div class="span12">
-        <h2>부트스트랩 v2.3.2 맞춤 다운로드를 더 이상 제공하지 않아서 미안하다.</h2>
-        <p>2014년 5월에 부트스트랩 v2.3.2 맞춤 다운로드 운영을 중단했다. 부트스트랩 v2.3.2 발표 후 일년 정도가 지난 시점이였다. <a href="http://getbootstrap.com">부트스트랩 v3</a>을 곧 발표했고, 지금은 사용할만 하다. 앞으로 새로운 프로젝트는 부트스트랩 v3을 사용하도록 권한다.</p>
-        <p>물론 여전히 직접 부트스트랩 v2.3.2를 컴파일할 수 있다. 방법은 <a href="./getting-started.html">시작하기 문서들</a>과 <a href="https://github.com/twbs/bootstrap/blob/v2.3.2/README.md#compiling-css-and-javascript">부트스트랩 v2.3.2 README</a>를 참고하라.</p>
+        <h2>유감스럽게도 더 이상 부트스트랩 v2.3.2 맞춤 다운로드를 제공하지 않습니다.</h2>
+        <p>2014년 5월부터 부트스트랩 v2.3.2 맞춤 다운로드 운영을 중단합니다. 부트스트랩 v2.3.2 발표 후 일년 정도가 지난 시점입니다. 곧 <a href="http://getbootstrap.com">부트스트랩 v3</a>이 나왔고, 지금은 사용할만 합니다. 이제 새로운 프로젝트에는 부트스트랩 v3을 권장합니다.</p>
+        <p>물론 여전히 부트스트랩 v2.3.2를 직접 컴파일할 수 있습니다. 컴파일하려면 <a href="./getting-started.html">시작하기 문서</a>와 <a href="https://github.com/twbs/bootstrap/blob/v2.3.2/README.md#compiling-css-and-javascript">부트스트랩 v2.3.2 README</a>를 참고하세요.</p>
       </div>
     </div>
 
