--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <div class="container">
 
   <div class="alert alert-danger bs-alert-old-docs">
-    <strong>주의!</strong> 더 이상 공식지원하지 않는 v2.3.2 문서이다. <a href="http://getbootstrap.com">최신 버전 부트스트랩을 확인하라!</a>
+    <strong>주의!</strong> 더 이상 공식지원하지 않는 v2.3.2 문서입니다. <a href="http://getbootstrap.com">최신 버전 부트스트랩을 확인하세요!</a>
   </div>
 
   <div class="marketing">
